--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-<h1>Welcome to freecocecamp</h1>
-<h2>Full Stack Curriculum</h2>
-<p>Learn the skills to become a full stack developer</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>FreeCodeCamp Curriculum Outline</title>
+</head>
 
-<h3>Introduction to HTML</h3>
-<p>HTML represents the structure and content of a webpage</p>
-<h3>Introduction to CSS</h3>
-<p>CSS is used to style a page </p>
+<body>
+  <h1>Welcome to freeCodeCamp</h1>
 
-<h3>Introduction to Javascript</h3>
-<p>Javascript adds interactivity to the webpage</p>
+  <h2>Full Stack Curriculum</h2>
+  <p>Learn the skills to become a full stack developer.</p>
+
+  <hr>
+
+  <h3>Introduction to HTML</h3>
+  <p>HTML represents the structure and content of a webpage.</p>
+
+  <h3>Introduction to CSS</h3>
+  <p>CSS is used to style a webpage.</p>
+
+  <h3>Introduction to JavaScript</h3>
+  <p>JavaScript adds interactivity to a webpage.</p>
+</body>
+</html>
